# money-tracker

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
libs/api_client_utils/src/: lib.rs
libs/binance-client/: Cargo.toml
libs/binance-client/src/: lib.rs
libs/coingecko-client/: Cargo.toml
libs/coingecko-client/src/: lib.rs
libs/lib-core/: Cargo.toml
libs/lib-core/src/: history.rs  lib.rs  storage.rs  traits.rs  types.rs
libs/nexo-csv/: Cargo.toml
libs/nexo-csv/src/: lib.rs
libs/utils/: Cargo.toml
libs/utils/src/: lib.rs
openspec/: project.md
openspec/changes/adopt-accounting-model/: proposal.md  tasks.md
openspec/changes/adopt-accounting-model/specs/core-domain-types/: spec.md
openspec/changes/archive/2025-11-26-move-core-types-to-lib/: proposal.md  tasks.md
openspec/changes/archive/2025-11-26-move-core-types-to-lib/specs/core-domain-types/: spec.md
openspec/changes/archive/2025-11-27-adopt-accounting-model/: design.md
openspec/changes/archive/2025-11-27-replace-rust-decimal-with-u64/: design.md
openspec/changes/archive/2025-11-27-replace-rust-decimal-with-u64/specs/financial-primitives/: spec.md
openspec/changes/archive/2025-11-28-add-cli-args-and-cache/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-28-add-cli-args-and-cache/specs/cli-args/: spec.md
openspec/changes/improve-nexo-file-handling/: design.md  proposal.md  tasks.md
openspec/changes/improve-nexo-file-handling/specs/nexo-file-handling/: spec.md
openspec/changes/persist-accounting-models/: design.md  proposal.md  tasks.md
openspec/changes/persist-accounting-models/specs/persistence/: spec.md
openspec/changes/replace-rust-decimal-with-u64/: proposal.md  tasks.md
openspec/specs/cli-args/: spec.md
openspec/specs/core-domain-types/: spec.md
scripts/: run
src/: actor_db.rs  binance.rs  coingecko.rs  data.rs  main.rs  models.rs  utils.rs
src/adapters/: binance.rs  binance2.rs  coingecko.rs
src/old/: data.rs  old_models.rs
