[package]
name = "crypto-tracker"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "libs/*"
]

[workspace.dependencies]
# async, web, db
tokio = { version="^1.37", features=["full"] }
reqwest = { version="^0.12", features=["json"] }
async-trait = "^0.1"
# serde, formats, codecs
serde = { version="^1.0", features=["derive"] }
serde_json = "^1.0"
polars = { version = "^0.39", features = [] }
# csv = "^1.3"
chrono = { version="^0.4", features=["serde"] }
# crypto, randomness
hmac-sha256 = "^1.1"
# errors, logs, env, config
anyhow = { version="^1.0", features=["backtrace"] } 
thiserror = "^1.0"
lazy_static = "^1.4"
# rust utils
derive_more = "^0.99"
# own libs, patches
binance-client = { path="./libs/binance-client" }
coingecko-client = { path="./libs/coingecko-client" }
nexo-csv = { path="./libs/nexo-csv" }
api-client-utils = { path='../../weekend-projects/rust-libs/api-client-utils' }
typed-ids = { path='../../weekend-projects/rust-libs/typed-ids' }
# api-client-utils = { git = "ssh://git@github.com/nmrshll/rust-libs.git" }
# [patch.'ssh://git@github.com/nmrshll/rust-libs.git']



[dependencies]
# async, web
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true
# data, serde, formats
serde.workspace = true
serde_json.workspace = true
polars.workspace = true
chrono.workspace = true
# crypto
hmac-sha256.workspace = true
# errors, logs, env, config
lazy_static.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy = "^0.15"
# rust utils
derive_more.workspace = true
itertools = "^0.10"
# own libs
api-client-utils.workspace = true
binance-client.workspace = true
coingecko-client.workspace = true
nexo-csv.workspace = true
miette = "7.2.0"
# typed-ids.workspace = true


