[workspace.package]
description = ""
authors = []
license = ""
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "libs/*",
    "bin/*"
]

[workspace.dependencies]
# async, web, db
tokio = { version="^1.37", features=["full"] }
reqwest = { version="^0.12", features=["json"] }
async-trait = "^0.1"
# serde, formats, codecs
serde = { version="^1.0", features=["derive"] }
serde_json = "^1.0"
polars = { version = "^0.39", features = [] }
# csv = "^1.3"
chrono = { version="^0.4", features=["serde"] }
# crypto, randomness
hmac-sha256 = "^1.1"
# errors, logs, env, config
anyhow = { version="^1.0", features=["backtrace"] } 
thiserror = "^1.0"
lazy_static = "^1.4"
snafu = { version = "^0.8" }
temp-env = "^0.3"
# rust utils
derive_more = "^0.99"
# own libs, patches
lib-core = { path="./libs/lib-core" }
binance-client = { path="./libs/binance-client" }
coingecko-client = { path="./libs/coingecko-client" }
nexo-csv = { path="./libs/nexo-csv" }
# api-client-utils = { path="./libs/api-client-utils" }
utils = { path="./libs/utils" }
typed-ids = { path='../../weekend-projects/rust-libs/typed-ids' }
# api-client-utils = { git = "ssh://git@github.com/nmrshll/rust-libs.git" }
# [patch.'ssh://git@github.com/nmrshll/rust-libs.git']



