[package]
name = "coingecko-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# own libs
utils.workspace = true
# async, web
tokio.workspace = true
reqwest.workspace = true
# data, serde, formats
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
# crypto
# errors, logs
anyhow.workspace = true
thiserror.workspace = true
# rust utils
